source/css/_header.scss
.page-wrap > header {
  background-color: white;
  margin-bottom: 36px;
  padding: 6px 12px;
  font-size: 0.1px; /* IE 9 & 10 don't like font-size: 0; */
  @include border-radius-pie(0px 0px $border-radius);
  position: relative; /* because .sharing-links is absolute positioned */

  h2 { 
    margin: 0;
    font-weight: normal; 
    @include font-size(18px);
    line-height: 1.6;
    white-space: nowrap;
    @include media-widescreen {
      @include font-size(20px);
      line-height: 1.5;
    }
  }

  a{ 
    color: $dark-font-color;
    text-decoration: none;
    &:hover{ 
      color: $dark-font-color-hovered; 
      text-decoration: underline;
    }
  }

  .signup-clip {
    p {
      @include font-size(18px);
      color: grey;
      margin: 0;
      text-align: center;
      b {
        a{
          color: $shortcut-font-color;
          &:hover{ color: $shortcut-font-color-hovered; }
        }
      }
    }
    &.small {
      display: none; 
      max-width: 134px;
      padding: 4px 0;

      p { line-height: 1.4; }
    }
    &.wide {
      p { 
        display: inline-block; 
        line-height: 1.6;
      }
    }
  }

  nav {
    @include debug-border(magenta);

    .logo-block, .small-nav {
      box-sizing: border-box;
    }

    .small-nav{ 
      display: none;
    }

    @media only screen and (min-width: 641px) {
      /* equally spaced divs: http://stackoverflow.com/a/6880421 */
      text-align: justify;
      >div {
        vertical-align: bottom;
        display: inline-block;
        *display: inline;
        zoom: 1;
        @include font-size(1rem);
        &:not(b) { @include debug-border(salmon); }
      }

      &:after {
       /* ensures there are at least 2 lines of text, so justification works */
        content: '';
        width: 100%;
        display: inline-block;
      }

      .divider:after {
        content: '';
        border-left: 1px solid $page-background-color;
        border-right: 1px solid $page-background-color;
        @include border-radius-pie(1px 1px 1px 1px);

        width: 0;
        padding-top: 4px;
        margin-bottom: 1px;
      }
    }

    @media only screen and (max-width: 796px) {
      .logo-block {
        position: relative;
        padding-right: 20px;
        &:after {
          content: '';
          position: absolute;
          top: 10%;
          bottom: 10%;
          right: 0;
          border-right: 1px solid $page-background-color;
        }
      }

      >div {
        vertical-align: middle;
      }

      .signup-clip {
        &.small{ display: block; }
        &.wide{ display: none; }
      }

      .divider {
        &.alpha{ display: none; }
        &:after{ border: none; }
      }

    }

    @media only screen and (max-width: 640px) {
      text-align: start;

      .logo-block { 
        width: 49.9%; /* strangly FF wraps the div.small-nav if 50% */
        display: inline-block; 
      }
      .divider, .wide-nav{ display: none; }
      .small-nav{ 
        display: inline-block; 
        text-align: start; 
        padding-left: 2%;
        width: 49.9%; /* strangly FF wraps the div.small-nav if 50% */
      }
    }
    @include debug-border(red);
  }

  @media only screen and (max-width: 640px) and (min-width: $portrait-to-landscape-mobile-breakpoint) {
    margin-right: 2%;
  }

  @include media-portrait-to-landscape-mobile-size {
    margin-bottom: 16px; margin-bottom: 1rem;
    .sharing-links{ display: none; }
  }
}

#logo {
  figure {
    max-width: 132px;
    line-height: 0;

    @mixin media-widescreen {
      max-width: 144px;
      line-height: 0;
    }
  }

  a{ 
    display: block;
    &:hover {
      svg path{ fill: $dark-font-color-hovered !important; }
    }
  }

  /* Make logo align with nav links even when logo starts to*/
  /* shrink. It doesn't matter that the height is smaller than*/
  /* the actual image.*/
  display: table-cell;
  height: 30px;
  vertical-align: bottom;
  /*svg{ height: 32px; }*/
}

.sharing-links {
  top: 2px;
  right: -30px;
  line-height: 1;
  position:absolute;;
  height: 0;

  a{ 
    display: block;
    &:hover {
      svg .background {
        * { 
          fill: $dark-font-color-hovered !important; 
        }
      }
    }
  }

  figure svg { width: 24px; }
}


@mixin ie-svg-hacks {
  /* fix containing element height bug */
  #shortcut_logo_rgb_small_shutter svg { max-width: 144px; max-height: 35px; } 
  #button_share_facebook,
  #button_share_twitter,
  #button_linkedin,
  #button_youtube {
    svg { max-width: 24px; max-height: 24px; } 
  }
}


@include apply-to-ie10_and_higher {
  /* IE10+ specific styles go here */  
  @include ie-svg-hacks;
}

@include apply-to-ie9-only {
  @include ie-svg-hacks;
}
@include apply-to-ie8-only {
  .page-wrap > header {
    nav > div {
      vertical-align: middle;
    }
    .wide-nav, .signup-clip.wide {
      margin-top: 2px;
    }
    .divider {
      margin-top: 6px;
    }
  }
}

.no-svg {
  @include def_info_graphic('shortcut_logo_rgb_small_shutter', 132px, 32px);
  @include def_info_graphic('button_share_facebook', 24px, 24px);
  @include def_info_graphic('button_share_twitter', 24px, 24px);
  @include def_info_graphic('button_linkedin', 24px, 24px);
  @include def_info_graphic('button_youtube', 24px, 24px);

  a:hover{
    @include def_info_graphic('button_share_facebook', 24px, 24px, '_hovered');
    @include def_info_graphic('button_share_twitter', 24px, 24px, '_hovered');
    @include def_info_graphic('button_linkedin', 24px, 24px, '_hovered');
    @include def_info_graphic('button_youtube', 24px, 24px, '_hovered');
  }

  figure { margin-bottom: 2px; }
}

